PropertyCategory & Property Dto/Service/Handler/Router  Implemented
