# src/api/routers/property.go
@@ -1,0 +1,28 @@
+package routers
+
+import (
+	"CarSaleAd-Web-Api/api/handlers"
+	"CarSaleAd-Web-Api/config"
+
+	"github.com/gin-gonic/gin"
+)
+
+func PropertyCategory(r *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewPropertyCategoryHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
+}
+
+func Property(r *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewPropertyHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
+}
