# src/data/models/property.go
@@ -2,18 +2,18 @@ package models
 
 type PropertyCategory struct {
 	BaseModel
-	Name       string     `gorm:"size:15;type:string;not null;unique"`
-	Icon       string     `gorm:"size:1000;type:string;not null;unique"`
+	Name       string     `gorm:"size:50;type:string;not null;unique"`
+	Icon       string     `gorm:"size:1000;type:string;not null"`
 	Properties []Property `gorm:"foreignKey:CategoryId"`
 }
 
 type Property struct {
 	BaseModel
 	Name        string           `gorm:"size:50;type:string;not null;unique"`
-	Icon        string           `gorm:"size:1000;type:string;not null;unique"`
+	Icon        string           `gorm:"size:1000;type:string;not null"`
 	Category    PropertyCategory `gorm:"foreignKey:CategoryId;constraint:OnUpdate:NO ACTION;OnDelete:NO ACTION"`
 	CategoryId  int
-	Description string `gorm:"size:1000;type:string;not null;unique"`
-	DataType    string `gorm:"size:15;type:string;not null;unique"`
-	Unit        string `gorm:"size:15;type:string;not null;unique"`
+	Description string `gorm:"size:1000;type:string;not null"`
+	DataType    string `gorm:"size:15;type:string;not null"`
+	Unit        string `gorm:"size:15;type:string;not null"`
 }
