# src/docs/swagger.yaml
@@ -19,6 +19,42 @@ definitions:
       name:
         type: string
     type: object
+  CarSaleAd-Web-Api_api_dto.CreatePropertyCategoryRequest:
+    properties:
+      icon:
+        maxLength: 1000
+        type: string
+      name:
+        maxLength: 50
+        minLength: 3
+        type: string
+    required:
+    - name
+    type: object
+  CarSaleAd-Web-Api_api_dto.CreatePropertyRequest:
+    properties:
+      categoryId:
+        type: integer
+      datatype:
+        maxLength: 15
+        type: string
+      description:
+        maxLength: 1000
+        type: string
+      icon:
+        maxLength: 1000
+        type: string
+      name:
+        maxLength: 50
+        minLength: 3
+        type: string
+      unit:
+        maxLength: 15
+        type: string
+    required:
+    - categoryId
+    - name
+    type: object
   CarSaleAd-Web-Api_api_dto.CreateUpdateCityRequest:
     properties:
       countryId:
@@ -135,6 +171,40 @@ definitions:
       totalRows:
         type: integer
     type: object
+  CarSaleAd-Web-Api_api_dto.PagedList-CarSaleAd-Web-Api_api_dto_PropertyCategoryResponse:
+    properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyCategoryResponse'
+        type: array
+      pageNumber:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
+  CarSaleAd-Web-Api_api_dto.PagedList-CarSaleAd-Web-Api_api_dto_PropertyResponse:
+    properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyResponse'
+        type: array
+      pageNumber:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
   CarSaleAd-Web-Api_api_dto.PaginationInputWithFilter:
     properties:
       filter:
@@ -149,6 +219,36 @@ definitions:
         items:
           $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.Sort'
         type: array
+    type: object
+  CarSaleAd-Web-Api_api_dto.PropertyCategoryResponse:
+    properties:
+      icon:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      properties:
+        items:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyResponse'
+        type: array
+    type: object
+  CarSaleAd-Web-Api_api_dto.PropertyResponse:
+    properties:
+      category:
+        $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyCategoryResponse'
+      datatype:
+        type: string
+      description:
+        type: string
+      icon:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      unit:
+        type: string
     type: object
   CarSaleAd-Web-Api_api_dto.RegisterLoginByMobileRequest:
     properties:
@@ -197,6 +297,32 @@ definitions:
   CarSaleAd-Web-Api_api_dto.UpdateFileRequest:
     properties:
       description:
+        type: string
+    type: object
+  CarSaleAd-Web-Api_api_dto.UpdatePropertyCategoryRequest:
+    properties:
+      icon:
+        type: string
+      name:
+        type: string
+    type: object
+  CarSaleAd-Web-Api_api_dto.UpdatePropertyRequest:
+    properties:
+      categoryId:
+        type: integer
+      datatype:
+        maxLength: 15
+        type: string
+      description:
+        maxLength: 1000
+        type: string
+      icon:
+        maxLength: 1000
+        type: string
+      name:
+        type: string
+      unit:
+        maxLength: 15
         type: string
     type: object
   CarSaleAd-Web-Api_api_helper.BaseHttpResponse:
@@ -742,6 +868,308 @@ paths:
       summary: Health Test
       tags:
       - Health
+  /v1/properties/:
+    post:
+      consumes:
+      - application/json
+      description: Create a Property
+      parameters:
+      - description: Create a Property
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CreatePropertyRequest'
+      responses:
+        "201":
+          description: Property response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a Property
+      tags:
+      - Property
+  /v1/properties/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a Property
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Response
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a Property
+      tags:
+      - Property
+    get:
+      consumes:
+      - application/json
+      description: Get a Property
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Property Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a Property
+      tags:
+      - Property
+    put:
+      consumes:
+      - application/json
+      description: Update a Property
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a Property
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.UpdatePropertyRequest'
+      responses:
+        "200":
+          description: Property response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a Property
+      tags:
+      - Property
+  /v1/properties/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: Get Properties
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: Property Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PagedList-CarSaleAd-Web-Api_api_dto_PropertyResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get Properties
+      tags:
+      - Property
+  /v1/property-categories/:
+    post:
+      consumes:
+      - application/json
+      description: Create a PropertyCategory
+      parameters:
+      - description: Create a PropertyCategory
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.CreatePropertyCategoryRequest'
+      responses:
+        "201":
+          description: PropertyCategory response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyCategoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a PropertyCategory
+      tags:
+      - PropertyCategory
+  /v1/property-categories/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a PropertyCategory
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Response
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a PropertyCategory
+      tags:
+      - PropertyCategory
+    get:
+      consumes:
+      - application/json
+      description: Get a PropertyCategory
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: PropertyCategory Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyCategoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a PropertyCategory
+      tags:
+      - PropertyCategory
+    put:
+      consumes:
+      - application/json
+      description: Update a PropertyCategory
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a PropertyCategory
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.UpdatePropertyCategoryRequest'
+      responses:
+        "200":
+          description: PropertyCategory response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PropertyCategoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a PropertyCategory
+      tags:
+      - PropertyCategory
+  /v1/property-categories/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: Get PropertyCategories
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: PropertyCategory Response
+          schema:
+            allOf:
+            - $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/CarSaleAd-Web-Api_api_dto.PagedList-CarSaleAd-Web-Api_api_dto_PropertyCategoryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/CarSaleAd-Web-Api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get PropertyCategories
+      tags:
+      - PropertyCategory
   /v1/test/binder/body:
     post:
       consumes:
